--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tercera-pre-entrega_felipe-paz_-comision52355",
+  "name": "y",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
